supervisor+falcon-agent

--- a/playbooks/supervisor.yml
+++ b/playbooks/supervisor.yml
@@ -3,7 +3,7 @@
   user: root
   become: yes
   gather_facts: yes
-  roles: 
-#    - iptables
-#    - repo
-    - facon-agent
+  roles:
+#    -repo
+    - supervisord
+    - falcon-agent
