--- a/roles/repo/tasks/main.yml
+++ b/roles/repo/tasks/main.yml
@@ -2,6 +2,7 @@
   template: src={{item.src}} dest={{item.dest}} owner=root group=root mode={{item.mode}} force=yes 
   with_items:
     - { src: 'szy.repo.j2', dest: '/etc/yum.repos.d/szy.repo', mode: 644 }
+    - { src: 'epel.repo.j2', dest: '/etc/yum.repos.d/epel.repo', mode: 644 }
 
 - name: mekecache yum
   command: yum makecache
